# tab-atelier

./: .gitattributes  .gitignore  AGENTS.md  CNAME  Cargo.toml  README.md  build.rs  default_10189383582154106242_0_30688.profraw  default_10189383582154106242_0_30692.profraw  default_10189383582154106242_0_30764.profraw  default_10189383582154106242_0_30770.profraw  default_10189383582154106242_0_30787.profraw  default_10302580304630389814_0_31886.profraw  default_10466183482940914391_0_30688.profraw  default_10466183482940914391_0_30692.profraw  default_10466183482940914391_0_30764.profraw  default_10466183482940914391_0_30770.profraw  default_10466183482940914391_0_30787.profraw  default_10616585603351868691_0_30688.profraw  default_10616585603351868691_0_30692.profraw  default_10616585603351868691_0_30764.profraw  default_10616585603351868691_0_30770.profraw  default_10616585603351868691_0_30787.profraw  default_11310696327848352623_0_30688.profraw  default_11310696327848352623_0_30692.profraw  default_11310696327848352623_0_30764.profraw  default_11310696327848352623_0_30770.profraw  default_11310696327848352623_0_30787.profraw  default_11331648732690173826_0_30688.profraw  default_11331648732690173826_0_30692.profraw  default_11331648732690173826_0_30764.profraw  default_11331648732690173826_0_30770.profraw  default_11331648732690173826_0_30787.profraw  default_11403282419504927809_0_30688.profraw  default_11403282419504927809_0_30692.profraw  default_11403282419504927809_0_30764.profraw  default_11403282419504927809_0_30770.profraw  default_11403282419504927809_0_30787.profraw  default_11429878235204227049_0_30688.profraw  default_11429878235204227049_0_30692.profraw  (+213 more)
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: android-apk.yml  apt-publish.yml  build.yml  release.yml  windows-desktop.yml  windows-msi.yml
android/: index.html
android/ta-remote/: .gitignore  Cargo.toml
android/ta-remote/fonts/: LICENSE.md
android/ta-remote/java/fr/wdes/tab_atelier/: WebViewHost.java
android/ta-remote/res/xml/: network_security_config.xml
android/ta-remote/src/: android_app.rs  lib.rs  onboard.rs
android/ta-remote/ui/: app.slint
assets/: claude-code-managed-settings.desktop.json  claude-code-managed-settings.json  main.css  main.js  openapi.yaml  preferences.default.json  site.webmanifest  tab-atelier-autostart.desktop  tab-atelier-headless.service  tab-atelier-release.gpg  tab-atelier.desktop  web-viewer.html
assets/headless-debian/: postinst  postrm  prerm
assets/pets/: blue_ham_ham.xml  blue_sheep.xml  green_sheep.xml  orange_sheep.xml  owl.xml  pink_sheep.xml  purple_sheep.xml  red_sheep.xml  yellow_sheep.xml
assets/windows/: tab-atelier.url
crates/catbus-agent/: Cargo.toml  default_795389402051670667_0_30824.profraw  default_795389402051670667_0_8664.profraw
crates/catbus-agent/src/: agent.rs  auth.rs  infomaniak.rs  main.rs  openai.rs  session.rs  socket.rs
crates/catbus-agent/src/tools/: bash.rs  delegate.rs  edit.rs  list_agents.rs  mod.rs  read.rs  write.rs
crates/catbus-agent/tests/: openai_mock.rs
crates/happier-relay/: Cargo.toml
crates/happier-relay/migrations/: 0001_init.sql  0002_sessions.sql  0003_kv.sql  0004_artifacts.sql  0005_tab_input.sql
crates/happier-relay/src/: artifacts.rs  auth.rs  changes.rs  db.rs  features.rs  jwt.rs  kv.rs  main.rs  pairing.rs  sessions.rs  socket.rs  sse.rs  state.rs  stubs.rs  tab_input.rs  web.rs
crates/happier-relay/tests/: artifacts_e2e.rs  auth_e2e.rs  kv_e2e.rs  sessions_e2e.rs  shared_account_e2e.rs  socket_e2e.rs  tab_input_e2e.rs
crates/happier-relay/web/: app.js  index.html  style.css
dists/nightly/: InRelease  Release  Release.gpg
dists/nightly/main/binary-amd64/: Packages
docs/: agent-probe.md  discovery.md  firecracker.md  hot-swap.md  per-tab-limits.md  plan-desktop-over-headless.md  schedule.md  teamwork.md
pool/nightly/main/t/tab-atelier/: tab-atelier-headless_0.5.0~nightly20260614.083137-1_amd64.deb  tab-atelier-headless_0.5.0~nightly20260615.091758-1_amd64.deb
scripts/: claude-lint-hook.sh  gui-paint-bench.sh  install-monaspace.sh  pgo-build.sh  setup-apt-publishing.sh  validate-nft-dns.sh  validate-nft-egress.sh
src/: agent_probe.rs  agent_reaper.rs  alloc_count.rs  api.rs  api_ws.rs  app.rs  box_drawing.rs  catbus_agent.rs  cgroup.rs  claude.rs  event_proxy.rs  happier_bridge.rs  headless.rs  hotswap.rs  http3.rs  lib.rs  locale.rs  main.rs  net_meter.rs  net_nft.rs  net_policy.rs  net_proxy.rs  net_resolver.rs  pet.rs  power.rs  pty_ring.rs  remote.rs  schedule.rs  screenshot.rs  term_export.rs  terminal.rs  terminal_utils.rs  theme.rs  tracking.rs  win_service.rs
src/cli/: bench.rs  bench_lag.rs  brain.rs  claude_hook.rs  client.rs  delegate.rs  dispatch.rs  flags.rs  logging.rs  mod.rs  remote.rs  set_context.rs  set_font.rs  set_status.rs  share_link.rs  tabs.rs  team.rs  tokens.rs  upgrade.rs
src/cli/remote/: attach.rs  files.rs  resolver.rs
src/platform/: linux.rs  mod.rs  windows.rs
tests/: claude_hook_assets.rs  rustls_provider.rs  terminal_view.rs
tools/: bake-pets
windows/: index.html  tab-atelier-headless-00e5f0e1-0.4.0-x86_64.msi  tab-atelier-headless-17fe6535-0.4.0-x86_64.msi  tab-atelier-headless-3da30178-0.4.0-x86_64.msi
wix/: desktop.wxs  main.wxs
