[workspace]
members = ["crates/catbus-agent", "crates/happier-relay"]
# happier-relay is an opt-in experimental sub-binary; keep it out of
# the default workspace build so `cargo build` / `cargo check` from the
# root stays lean. Build it explicitly with
# `cargo build -p happier-relay --features happier-dev`.
default-members = [".", "crates/catbus-agent"]

[package]
name = "tab-atelier"
version = "0.4.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Guake-style drop-down terminal emulator for Linux (X11)"
license = "MPL-2.0"
homepage = "https://github.com/wdes/tab-atelier#readme"
repository = "https://github.com/wdes/tab-atelier"
readme = "README.md"
keywords = ["terminal", "guake", "dropdown", "x11", "emulator"]
categories = ["command-line-utilities"]
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

[features]
default = ["energy"]
energy = ["dep:wattaouille"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Pixel math requires constant casting between f32/i32/usize
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# gpui render functions are inherently long
too_many_lines = "allow"
# Common in terminal code with grid coordinates
similar_names = "allow"
# AppState struct
struct_excessive_bools = "allow"
# gpui Window/Context are always &mut even when not mutated by our code
needless_pass_by_ref_mut = "allow"

[dependencies]
alacritty_terminal = "0.26"
env_logger = "0.11"
gpui = { version = "0.2", default-features = false, features = ["x11"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
qrcode = { version = "0.14", default-features = false }
ureq = { version = "3", features = ["json"] }
vte = { version = "0.15", default-features = false, features = ["std", "ansi"] }
wattaouille = { version = "1.4.0", optional = true }
ctrlc = { version = "3.4", default-features = false }
fs2 = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

[dev-dependencies]
gpui = { version = "0.2", default-features = false, features = ["x11", "test-support"] }

[package.metadata.deb]
section = "x11"
priority = "optional"
depends = "libc6, libgcc-s1, libfreetype6, libxkbcommon0, libxkbcommon-x11-0, libxcb1, libxcb-xkb1"
maintainer = "William Desportes <williamdes@wdes.fr>"
extended-description = "A Guake-style drop-down terminal emulator built with alacritty_terminal and gpui. Features tabbed terminals, i18n (English/French), power monitoring, screenshots, remote control via QR code, and Wakatime integration."
assets = [
    ["target/release/tab-atelier", "/usr/bin/", "755"],
    # Bundled so the "Switch to catbus" tab menu entry resolves the
    # binary against the user's PATH without extra config.
    ["target/release/catbus-agent", "/usr/bin/", "755"],
    ["assets/tab-atelier.desktop", "/usr/share/applications/", "644"],
    ["assets/tab-atelier.svg", "/usr/share/icons/hicolor/scalable/apps/tab-atelier.svg", "644"],
    ["README.md", "/usr/share/doc/tab-atelier/", "644"],
    ["LICENSE", "/usr/share/doc/tab-atelier/", "644"],
]
# Per debian-policy §10.7.2, conffiles are files in /etc that dpkg
# treats as user-modifiable. tab-atelier ships none — every piece of
# user state lives under $XDG_CONFIG_HOME / $XDG_STATE_HOME in the
# user's home directory, so dpkg has no business managing it. Setting
# this to [] makes that intentional rather than implicit.
conf-files = []
