[workspace]
members = ["crates/catbus-agent", "crates/happier-relay"]
# happier-relay is an opt-in experimental sub-binary; keep it out of
# the default workspace build so `cargo build` / `cargo check` from the
# root stays lean. Build it explicitly with
# `cargo build -p happier-relay --features happier-dev`.
default-members = [".", "crates/catbus-agent", "crates/happier-relay"]

[package]
name = "tab-atelier"
version = "0.4.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Guake-style drop-down terminal emulator for Linux (X11)"
license = "MPL-2.0"
homepage = "https://github.com/wdes/tab-atelier#readme"
repository = "https://github.com/wdes/tab-atelier"
readme = "README.md"
keywords = ["terminal", "guake", "dropdown", "x11", "emulator"]
categories = ["command-line-utilities"]
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

# Default GUI binary. Built when the `gui` feature is on (default).
[[bin]]
name = "tab-atelier"
required-features = ["gui"]

# Headless companion that restores tabs and runs the local API but
# never touches a display server. Built with
# `--no-default-features --features headless` so it pulls in neither
# gpui nor x11rb nor qrcode — only libc + alacritty_terminal + rustls.
[[bin]]
name = "tab-atelier-headless"
path = "src/bin/tab-atelier-headless.rs"
required-features = ["headless"]

[features]
default = ["gui", "energy"]
# Desktop GUI build: gpui + x11rb (hotkeys + screenshot) + qrcode.
# Pulls in `catbus` because the GUI's "Switch to catbus" flow and the
# per-tab token/agent readouts call into that module unconditionally.
gui = ["dep:gpui", "dep:x11rb", "dep:qrcode", "catbus"]
# Display-less variant: only the API server + PTY-driven tab restore
# + happier-bridge spawn. Selected with `--no-default-features
# --features headless[,...]`.
headless = []
energy = ["dep:wattaouille"]
# catbus-agent integration: per-tab Claude session detection (walks
# /proc), token-usage sidecars, and the `/tabs/N/catbus*` API endpoints
# that talk to the agent over a UNIX socket. Hard Linux dependency
# (/proc + AF_UNIX), so it's a separate feature that the Windows build
# leaves off. Implied by `gui`; included in the Linux headless .deb.
catbus = []
# Opt-in bridge that publishes every tab as a happier artifact against a
# user-provided relay (`--happier-relay-url`). Off by default to keep
# the regular build slim — when enabled, pulls in ed25519 / base64 /
# happier-style wire types via the `happier-relay` workspace member.
happier-bridge = ["dep:ed25519-dalek", "dep:base64", "dep:rand"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Pixel math requires constant casting between f32/i32/usize
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# gpui render functions are inherently long
too_many_lines = "allow"
# Common in terminal code with grid coordinates
similar_names = "allow"
# AppState struct
struct_excessive_bools = "allow"
# gpui Window/Context are always &mut even when not mutated by our code
needless_pass_by_ref_mut = "allow"

[dependencies]
alacritty_terminal = "0.26"
env_logger = "0.11"
# gpui's windowing backend is platform-specific, so it's declared in the
# per-target tables below (x11 feature on Linux; the auto-selected
# Windows backend with no feature on Windows) rather than here.
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }
ureq = { version = "3", features = ["json"] }
vte = { version = "0.15", default-features = false, features = ["std", "ansi"] }
wattaouille = { version = "1.4.0", optional = true }
ctrlc = { version = "3.4", default-features = false }
fs2 = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
# Used to hex-encode the TOFU SHA-256 fingerprint of a remote
# `tab-atelier-headless`'s self-signed TLS cert (Preferences > Remote
# endpoints > Pin certificate).
sha2 = { version = "0.10", default-features = false }
# Used to pin self-signed cert validity to (now, now+5y). rcgen's
# default is `1975-01-01 → 4096-01-01`, which strict mobile TLS
# stacks (Android) reject.
time = "0.3"
# Optional happier-bridge deps (only compiled with `--features happier-bridge`).
ed25519-dalek = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
# gzip for the mobile-remote HTTP responses (3–4× smaller for terminal
# scrollback). Already in the transitive tree; pulling it in directly
# so we can wrap our own write path.
flate2 = "1"
# Stable per-tab IDs persisted into tabs.json — used by the
# `POST /tabs/by-id/{id}/status` API + the auto-resume path.
uuid = { version = "1", features = ["v4"] }
# Live `tab-atelier tabs` viewer: ratatui draws the per-row table
# with the LED + watts/CPU mirror of the desktop's bottom bar, and
# crossterm flips the terminal into the alt-screen + raw mode while
# the viewer is up.
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
# Transitive of ureq today but the remote-tab client reads response
# headers directly, so import it explicitly to insulate against ureq
# bumps.
http = "1"


[dev-dependencies]
gpui = { version = "0.2", default-features = false, features = ["x11", "test-support"] }
tempfile = "3"

# Windows has no /dev/urandom; getrandom wraps BCryptGenRandom so
# platform::random_bytes() has a real CSPRNG. Already present
# transitively (rand, uuid) — gated to Windows so the Linux dep graph
# is untouched.
# gpui with the X11 backend — Linux desktop build only.
[target.'cfg(target_os = "linux")'.dependencies]
gpui = { version = "0.2", default-features = false, features = ["x11"], optional = true }

[target.'cfg(windows)'.dependencies]
getrandom = "0.2"
# SCM integration so the installed MSI can run the daemon as a Windows
# service (no console window). The crate's FFI dispatcher macro needs
# `unsafe`, confined to src/win_service.rs via an explicit allow.
windows-service = "0.6"
# gpui with no backend feature → gpui auto-selects its Windows (DirectX)
# backend. Whether the published 0.2 crate actually supports Windows is
# what the windows-desktop probe build verifies.
gpui = { version = "0.2", default-features = false, optional = true }

[package.metadata.deb]
section = "x11"
priority = "optional"
# The bundled happier-relay auto-spawn lives behind the
# `happier-bridge` feature. `cargo build` keeps it off for fast dev
# rebuilds; the deb always wants it.
features = ["happier-bridge"]
depends = "libc6, libgcc-s1, libfreetype6, libxkbcommon0, libxkbcommon-x11-0, libxcb1, libxcb-xkb1"
# Desktop and headless ship the same `catbus-agent` and
# `happier-relay` helper binaries in `/usr/bin/`, so they can't both
# be installed at once. `Conflicts:` makes apt refuse the second
# install with a clean message instead of letting dpkg unpack-then-
# crash on a colliding path. `Replaces:` is the matching half so a
# user who installed one and wants to switch can `apt install
# tab-atelier-headless` and apt does the swap.
conflicts = "tab-atelier-headless"
replaces = "tab-atelier-headless"
maintainer = "William Desportes <williamdes@wdes.fr>"
extended-description = "A Guake-style drop-down terminal emulator built with alacritty_terminal and gpui. Features tabbed terminals, i18n (English/French), power monitoring, screenshots, remote control via QR code, and Wakatime integration."
assets = [
    ["target/release/tab-atelier", "/usr/bin/", "755"],
    # Bundled so the "Switch to catbus" tab menu entry resolves the
    # binary against the user's PATH without extra config.
    ["target/release/catbus-agent", "/usr/bin/", "755"],
    # tab-atelier spawns this on startup (when `happier-bridge` is
    # built in) so the mobile/web clients have a relay to talk to
    # without the user managing a separate process.
    ["target/release/happier-relay", "/usr/bin/", "755"],
    ["assets/tab-atelier.desktop", "/usr/share/applications/", "644"],
    # Drops a system-wide autostart entry so the app appears in
    # session-manager autostart lists (XFCE: Session and Startup →
    # Application Autostart). Defaults to enabled; users can untick.
    ["assets/tab-atelier-autostart.desktop", "/etc/xdg/autostart/tab-atelier.desktop", "644"],
    ["assets/tab-atelier.svg", "/usr/share/icons/hicolor/scalable/apps/tab-atelier.svg", "644"],
    # System-wide preferences fallback. `lib.rs::load_preferences()`
    # reads this when no per-user $HOME/.local/tab-atelier/preferences.json
    # exists — so an admin can pre-seed bind addresses for a fresh
    # install. Listed in `conf-files` below so dpkg treats local
    # edits the policy-correct way on upgrade.
    ["assets/preferences.default.json", "/etc/tab-atelier/preferences.json", "644"],
    ["README.md", "/usr/share/doc/tab-atelier/", "644"],
    ["LICENSE", "/usr/share/doc/tab-atelier/", "644"],
]
# Per debian-policy §10.7.2, conffiles are files in /etc that dpkg
# treats as user-modifiable: on upgrade, dpkg prompts the admin if
# both we and they changed the file. The autostart .desktop entry
# above is deliberately NOT a conffile — admins shouldn't be editing
# it. `preferences.json` IS, so admins can tune defaults and keep
# those edits across upgrades.
conf-files = ["/etc/tab-atelier/preferences.json"]

# Headless variant — produces tab-atelier-headless_<version>.deb.
# Built with `cargo deb -p tab-atelier --variant headless`. Uses
# `--no-default-features --features headless,happier-bridge,energy,catbus`
# under the hood so the binary depends only on libc / libgcc and
# never pulls in libfreetype / libxkbcommon / libxcb / libqrcode.
# `catbus` stays on for the Linux .deb; a future Windows headless build
# is the only configuration that drops it.
[package.metadata.deb.variants.headless]
name = "tab-atelier-headless"
features = ["headless", "happier-bridge", "energy", "catbus"]
default-features = false
# Mirror of the default variant — see the comment on
# `[package.metadata.deb].conflicts`. apt picks one or the other.
conflicts = "tab-atelier"
replaces = "tab-atelier"
extended-description = "Display-less companion to tab-atelier. Restores tabs from tabs.json, spawns their PTYs, and runs the same local HTTP/TLS API + happier-bridge as the desktop GUI — without any X11 / gpui dependency. Designed for servers, CI runners, and remote shells where the mobile/web remote should still see the same set of named tabs."
assets = [
    ["target/release/tab-atelier-headless", "/usr/bin/", "755"],
    ["target/release/catbus-agent", "/usr/bin/", "755"],
    ["target/release/happier-relay", "/usr/bin/", "755"],
    # Systemd *system* unit — runs as the unprivileged `tab-atelier`
    # service account (created by the postinst). State lives under
    # /var/lib/tab-atelier via the unit's StateDirectory=. Designed for
    # unattended boxes (Proxmox VMs, build runners) where no human is
    # logged in to start a `--user` unit.
    ["assets/tab-atelier-headless.service", "/usr/lib/systemd/system/", "644"],
    # Same system-wide preferences fallback as the desktop variant —
    # see the comment over there. Particularly useful for the
    # headless box where there's no GUI Preferences dialog to write
    # the per-user file.
    ["assets/preferences.default.json", "/etc/tab-atelier/preferences.json", "644"],
    ["README.md", "/usr/share/doc/tab-atelier-headless/", "644"],
    ["LICENSE", "/usr/share/doc/tab-atelier-headless/", "644"],
]
# Service-account lifecycle (adduser/deluser) and unit enable/start
# are handled by these scripts; cargo-deb installs them as the deb's
# maintainer scripts with mode 0755.
maintainer-scripts = "assets/headless-debian/"
# `adduser` for the `tab-atelier` service account in postinst.
# `init-system-helpers` is essential but listed explicitly to make
# the deb-systemd-helper / deb-systemd-invoke dependency obvious.
depends = "libc6, libgcc-s1, adduser, init-system-helpers"
# Mirror the default variant: the shipped preferences.json fallback
# is a real conffile so admin edits survive `apt upgrade`. Listed
# explicitly because cargo-deb variants don't always inherit
# `conf-files`.
conf-files = ["/etc/tab-atelier/preferences.json"]
