[workspace]
members = ["crates/catbus-agent"]
default-members = [".", "crates/catbus-agent"]

[package]
name = "tab-atelier"
version = "0.4.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["William Desportes <williamdes@wdes.fr>"]
description = "Guake-style drop-down terminal emulator for Linux (X11)"
license = "MPL-2.0"
homepage = "https://github.com/wdes/tab-atelier#readme"
repository = "https://github.com/wdes/tab-atelier"
readme = "README.md"
keywords = ["terminal", "guake", "dropdown", "x11", "emulator"]
categories = ["command-line-utilities"]
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

# Default GUI binary. Built when the `gui` feature is on (default).
[[bin]]
name = "tab-atelier"
required-features = ["gui"]

# Headless companion that restores tabs and runs the local API but
# never touches a display server. Built with
# `--no-default-features --features headless` so it pulls in neither
# gpui nor x11rb nor qrcode — only libc + alacritty_terminal + rustls.
[[bin]]
name = "tab-atelier-headless"
path = "src/bin/tab-atelier-headless.rs"
required-features = ["headless"]

[features]
default = ["gui", "energy", "catbus"]
# Desktop GUI build: gpui + x11rb (hotkeys + screenshot) + qrcode.
# Does NOT pull `catbus` — the GUI uses catbus on Linux, but a Windows
# desktop build must drop it (catbus_agent uses AF_UNIX + /proc).
# `catbus` is in the `default` feature instead, so Linux builds keep it
# while `--no-default-features --features gui` on Windows omits it.
gui = ["dep:gpui", "dep:x11rb", "dep:qrcode"]
# Display-less variant: only the API server + PTY-driven tab restore.
# Selected with `--no-default-features --features headless[,...]`.
headless = []
energy = ["dep:wattaouille"]
# catbus-agent integration: per-tab Claude session detection (walks
# /proc), token-usage sidecars, and the `/tabs/N/catbus*` API endpoints
# that talk to the agent over a UNIX socket. Hard Linux dependency
# (/proc + AF_UNIX), so it's a separate feature that the Windows build
# leaves off. Implied by `gui`; included in the Linux headless .deb.
catbus = []

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Pixel math requires constant casting between f32/i32/usize
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# gpui render functions are inherently long
too_many_lines = "allow"
# Common in terminal code with grid coordinates
similar_names = "allow"
# AppState struct
struct_excessive_bools = "allow"
# gpui Window/Context are always &mut even when not mutated by our code
needless_pass_by_ref_mut = "allow"

[dependencies]
alacritty_terminal = "0.26"
# Same `polling` alacritty pulls in transitively; promoted to a direct
# dep so we can implement `EventedReadWrite` on our PTY tap wrapper
# (the trait's register/reregister take `Arc<polling::Poller>` and
# `polling::{Event, PollMode}`, so we need the type names in scope).
polling = "3"
env_logger = "0.11"
# gpui's windowing backend is platform-specific, so it's declared in the
# per-target tables below (x11 feature on Linux; the auto-selected
# Windows backend with no feature on Windows) rather than here.
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }
ureq = { version = "3", features = ["json"] }
vte = { version = "0.15", default-features = false, features = ["std", "ansi"] }
wattaouille = { version = "1.4.0", optional = true }
ctrlc = { version = "3.4", default-features = false }
fs2 = "0.4"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
# Top-level CLI parser. Already in the dep tree transitively (via
# `wakatime-rs`-style crates pulled in by gpui); promote to a direct
# dep so the headless + desktop binaries can `#[derive(Parser)]`
# their subcommand routing instead of hand-rolling `match args[0]`.
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
# Async HTTP/1+2 server. Tokio runtime is single-thread inside the
# API server thread — no global tokio dep is exported to anything
# else in the crate. h3+quinn live alongside on a UDP listener
# (added separately when we want HTTP/3).
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync", "time", "io-util", "macros"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
bytes = "1"
# Held at 0.13 — 0.14 removed `CertificateParams::from_ca_cert_pem`
# (the entry point we use to parse a persisted CA cert from PEM)
# without an obvious replacement on the same type. Bumping needs a
# read of the 0.14 migration notes + a sweep of src/api.rs. Until
# then we stay on the last working API; 0.13.x picks up patches
# automatically.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
# Used to hex-encode the TOFU SHA-256 fingerprint of a remote
# `tab-atelier-headless`'s self-signed TLS cert (Preferences > Remote
# endpoints > Pin certificate).
sha2 = { version = "0.10", default-features = false }
# Used to pin self-signed cert validity to (now, now+5y). rcgen's
# default is `1975-01-01 → 4096-01-01`, which strict mobile TLS
# stacks (Android) reject.
time = "0.3"
# gzip for the mobile-remote HTTP responses (3–4× smaller for terminal
# scrollback). Already in the transitive tree; pulling it in directly
# so we can wrap our own write path.
flate2 = "1"
# Stable per-tab IDs persisted into tabs.json — used by the
# `POST /tabs/by-id/{id}/status` API + the auto-resume path.
uuid = { version = "1", features = ["v4"] }
# Used by `tab-atelier remote attach` for raw-mode + alt-screen on
# the local terminal while the remote PTY is mirrored to it.
crossterm = { version = "0.29", default-features = false, features = ["events"] }
# Transitive of ureq today but the remote-tab client reads response
# headers directly, so import it explicitly to insulate against ureq
# bumps.
http = "1"
# Per-tab off-hours auto-lock (Settings → Schedule). Rule grammar is
# OSM `opening_hours` (e.g. `Mo-Fr 09:00-18:00; PH off`) so a single
# string covers weekly patterns + public holidays + lunch breaks.
# Paired with `chrono-tz` so the schedule's tz is explicit per tab
# (no machine-local drift when running headless on a server in a
# different region than the user).
opening-hours = { version = "1.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = { version = "0.10", default-features = false, features = ["std"] }


[dev-dependencies]
gpui = { version = "0.2", default-features = false, features = ["x11", "test-support"] }
tempfile = "3"

# Windows has no /dev/urandom; getrandom wraps BCryptGenRandom so
# platform::random_bytes() has a real CSPRNG. Already present
# transitively (rand, uuid) — gated to Windows so the Linux dep graph
# is untouched.
# gpui with the X11 backend — Linux desktop build only.
[target.'cfg(target_os = "linux")'.dependencies]
gpui = { version = "0.2", default-features = false, features = ["x11"], optional = true }

[target.'cfg(windows)'.dependencies]
# getrandom 0.4 renamed `getrandom()` → `fill()` and dropped the
# alloc feature gate. Tracked under src/platform/windows.rs which
# uses the new API. Held at the current minor (0.4.x picks up
# patches automatically).
getrandom = "0.4"
# SCM integration so the installed MSI can run the daemon as a Windows
# service (no console window). The crate's FFI dispatcher macro needs
# `unsafe`, confined to src/win_service.rs via an explicit allow.
#
# Held at 0.6 — the 0.7 / 0.8 jumps both renamed types in
# `windows_service::service::*` and the dispatcher macro signature.
# Bumping needs a manual sweep of src/win_service.rs against the
# 0.7 changelog (ServiceControlAccept → ServiceAccept rename
# among others). Tracking issue: next windows-service review.
windows-service = "0.6"
# gpui with no backend feature → gpui auto-selects its Windows (DirectX)
# backend. Whether the published 0.2 crate actually supports Windows is
# what the windows-desktop probe build verifies.
gpui = { version = "0.2", default-features = false, optional = true }

[package.metadata.deb]
section = "x11"
priority = "optional"
# Font Depends rationale: the GUI defaults to font-family "monospace"
# (src/lib.rs::FontConfig::default), a Fontconfig generic alias. With
# NO monospace font installed, Fontconfig may resolve to a fallback
# missing Latin Extended (no precomposed é/è/à/ç glyphs), and the
# fallback's per-glyph advance metrics don't match the host font —
# producing the visible horizontal gaps around accented chars we
# saw in the wild.
#
# Per Debian Fonts Task Force convention we don't ship our own font
# subpackage (we're not the upstream); we Depends on existing
# `fonts-*` packages with `|` alternatives so any of these satisfies.
# Order from most-likely-already-installed to least: dejavu-core is
# pulled in by task-desktop / gnome / kde metapackages, so most
# desktops add zero bytes. The other two are common Liberation /
# Noto fallbacks shipped with many distros.
depends = "libc6, libgcc-s1, libfreetype6, libxkbcommon0, libxkbcommon-x11-0, libxcb1, libxcb-xkb1, fonts-dejavu-core | fonts-liberation | fonts-noto-mono"
# Desktop and headless ship the same `catbus-agent` helper binary in
# `/usr/bin/`, so they can't both be installed at once.
# `Conflicts:` makes apt refuse the second install with a clean
# message instead of letting dpkg unpack-then-crash on a colliding
# path. `Replaces:` is the matching half so a user who installed
# one and wants to switch can `apt install tab-atelier-headless`
# and apt does the swap.
conflicts = "tab-atelier-headless"
replaces = "tab-atelier-headless"
maintainer = "William Desportes <williamdes@wdes.fr>"
extended-description = "A Guake-style drop-down terminal emulator built with alacritty_terminal and gpui. Features tabbed terminals, i18n (English/French), power monitoring, screenshots, remote control via QR code, and Wakatime integration."
assets = [
    ["target/release/tab-atelier", "/usr/bin/", "755"],
    # Bundled so the "Switch to catbus" tab menu entry resolves the
    # binary against the user's PATH without extra config.
    ["target/release/catbus-agent", "/usr/bin/", "755"],
    ["assets/tab-atelier.desktop", "/usr/share/applications/", "644"],
    # Drops a system-wide autostart entry so the app appears in
    # session-manager autostart lists (XFCE: Session and Startup →
    # Application Autostart). Defaults to enabled; users can untick.
    ["assets/tab-atelier-autostart.desktop", "/etc/xdg/autostart/tab-atelier.desktop", "644"],
    ["assets/tab-atelier.svg", "/usr/share/icons/hicolor/scalable/apps/tab-atelier.svg", "644"],
    # System-wide preferences fallback. `lib.rs::load_preferences()`
    # reads this when no per-user $HOME/.local/tab-atelier/preferences.json
    # exists — so an admin can pre-seed bind addresses for a fresh
    # install. Listed in `conf-files` below so dpkg treats local
    # edits the policy-correct way on upgrade.
    ["assets/preferences.default.json", "/etc/tab-atelier/preferences.json", "644"],
    ["README.md", "/usr/share/doc/tab-atelier/", "644"],
    ["LICENSE", "/usr/share/doc/tab-atelier/", "644"],
]
# Per debian-policy §10.7.2, conffiles are files in /etc that dpkg
# treats as user-modifiable: on upgrade, dpkg prompts the admin if
# both we and they changed the file. The autostart .desktop entry
# above is deliberately NOT a conffile — admins shouldn't be editing
# it. `preferences.json` IS, so admins can tune defaults and keep
# those edits across upgrades.
conf-files = ["/etc/tab-atelier/preferences.json"]

# Headless variant — produces tab-atelier-headless_<version>.deb.
# Built with `cargo deb -p tab-atelier --variant headless`. Uses
# `--no-default-features --features headless,energy,catbus` under the
# hood so the binary depends only on libc / libgcc and never pulls in
# libfreetype / libxkbcommon / libxcb / libqrcode. `catbus` stays on
# for the Linux .deb; a future Windows headless build is the only
# configuration that drops it.
[package.metadata.deb.variants.headless]
name = "tab-atelier-headless"
features = ["headless", "energy", "catbus"]
default-features = false
# Mirror of the default variant — see the comment on
# `[package.metadata.deb].conflicts`. apt picks one or the other.
conflicts = "tab-atelier"
replaces = "tab-atelier"
extended-description = "Display-less companion to tab-atelier. Restores tabs from tabs.json, spawns their PTYs, and runs the same local HTTP/TLS API as the desktop GUI — without any X11 / gpui dependency. Designed for servers, CI runners, and remote shells where the web viewer should still see the same set of named tabs."
assets = [
    ["target/release/tab-atelier-headless", "/usr/bin/", "755"],
    ["target/release/catbus-agent", "/usr/bin/", "755"],
    # Systemd *system* unit — runs as the unprivileged `tab-atelier`
    # service account (created by the postinst). State lives under
    # /var/lib/tab-atelier via the unit's StateDirectory=. Designed for
    # unattended boxes (Proxmox VMs, build runners) where no human is
    # logged in to start a `--user` unit.
    ["assets/tab-atelier-headless.service", "/usr/lib/systemd/system/", "644"],
    # Same system-wide preferences fallback as the desktop variant —
    # see the comment over there. Particularly useful for the
    # headless box where there's no GUI Preferences dialog to write
    # the per-user file.
    ["assets/preferences.default.json", "/etc/tab-atelier/preferences.json", "644"],
    # System-wide Claude Code hooks — `claude` reads this for every
    # user on the box and pipes SessionStart / Stop / etc. events
    # through `tab-atelier-headless claude-hook` so the desktop LED
    # and the mobile remote both track agent state without each user
    # editing their own ~/.claude/settings.json.
    ["assets/claude-code-managed-settings.json", "/etc/claude-code/managed-settings.json", "644"],
    ["README.md", "/usr/share/doc/tab-atelier-headless/", "644"],
    ["LICENSE", "/usr/share/doc/tab-atelier-headless/", "644"],
]
# Service-account lifecycle (adduser/deluser) and unit enable/start
# are handled by these scripts; cargo-deb installs them as the deb's
# maintainer scripts with mode 0755.
maintainer-scripts = "assets/headless-debian/"
# `adduser` for the `tab-atelier` service account in postinst.
# `init-system-helpers` is essential but listed explicitly to make
# the deb-systemd-helper / deb-systemd-invoke dependency obvious.
depends = "libc6, libgcc-s1, adduser, init-system-helpers"
# Mirror the default variant: the shipped preferences.json fallback
# is a real conffile so admin edits survive `apt upgrade`. The Claude
# Code system hooks live in a different /etc subdir; making it a
# conffile too means user edits survive upgrades.
conf-files = [
    "/etc/tab-atelier/preferences.json",
    "/etc/claude-code/managed-settings.json",
]
