[package]
name = "ta-remote"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-femtovg",
    "backend-android-activity-06",
] }
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
android_logger = "0.14"
jni = "0.21"

[build-dependencies]
slint-build = "1"

[package.metadata.android]
package = "fr.wdes.tab_atelier"
build_targets = ["aarch64-linux-android"]
apk_name = "ta-remote"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "tar3mote"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
label = "Tab Atelier Remote"

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
config_changes = "orientation|keyboardHidden|screenSize"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "ta_remote"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW"]
categories = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]

[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "taremote"
host = "onboard"
