# Kept out of the desktop workspace on purpose — different target
# (aarch64-linux-android), different lockfile, completely disjoint
# dependency tree. An empty [workspace] table tells Cargo to stop
# walking up looking for a parent workspace.
[workspace]

[package]
name = "ta-remote"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Reuse the desktop crate's casting-policy exemptions — ANSI palette
# indices, CRC32 byte mixing, and battery-percent math are all
# narrowing casts we genuinely want.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# `android_main` is one big wiring function; splitting it would obscure
# the start-up ordering.
too_many_lines = "allow"
# Slint generates `Send`-ish callback handlers that take owned
# SharedString arguments; the closures don't always consume them.
needless_pass_by_value = "allow"
# The remove/add/update-host handlers lock the AppData mutex, mutate
# it, and call push_hosts(&data) before returning. Releasing the lock
# before push_hosts would require cloning out the host vector, which
# is more allocation churn than the lock contention it avoids on the
# (almost-never-contended) UI thread.
significant_drop_tightening = "allow"

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
    "renderer-femtovg",
    "backend-android-activity-06",
] }
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
android_logger = "0.14"
jni = "0.21"

[build-dependencies]
slint-build = "1"

[package.metadata.android]
package = "fr.wdes.tab_atelier"
build_targets = ["aarch64-linux-android"]
apk_name = "ta-remote"
resources = "res"
# Sources for the in-app WebView host (fullscreen WebView with the
# SSL bypass that lets us reach a self-signed origin cert). cargo-apk2
# compiles every *.java under this tree into classes.dex.
java_sources = "java"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "tar3mote"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
label = "Tab Atelier Remote"
icon = "@mipmap/ic_launcher"
# Allow plain HTTP loads from WebView (LAN share-viewer) and trust
# user-installed CA certs so WSS to the headless's self-signed origin
# cert works once the operator imports it via Settings → Security.
uses_cleartext_traffic = true
network_security_config = "@xml/network_security_config"

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
config_changes = "orientation|keyboardHidden|screenSize"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"
# Note: cargo-apk2's manifest schema doesn't currently expose
# windowSoftInputMode, so the IME-overlap fix lives in Slint instead —
# `root.virtual-keyboard-size.height` is read in ui/app.slint to lift
# the editor/rename dialogs and the terminal input bar above the
# keyboard when it shows.

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "ta_remote"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW"]
categories = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]

[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "taremote"
host = "onboard"
